--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                             </div>
                             <div class="ps-3">
                                 <p class="mb-2">Call Us</p>
-                                <h6 class="mb-0">+012 345 6789</h6>
+                                <h6 class="mb-0">+251948267324</h6>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                             </div>
                             <div class="ps-3">
                                 <p class="mb-2">Email Us</p>
-                                <h6 class="mb-0">info@example.com</h6>
+                                <h6 class="mb-0">negentechsolutions@gmail.com</h6>
                             </div>
                         </div>
                     </div>
@@ -226,8 +226,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519482673240</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>negentechsolutions@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
