--- a/about.html
+++ b/about.html
@@ -213,8 +213,8 @@
                     <div class="h-100">
                         <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
                         <h1 class="display-6 mb-4">#1 Digital Solution With <span class="text-primary">10 Years</span> Of Experience</h1>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
+                        <p>At ነገን tech solutions, we offer a comprehensive range of services, including software development, digital marketing, technology solutions, printing, and graphic design. Our mission is to empower businesses with tailored software applications and effective online strategies that drive growth and engagement. From custom software solutions to impactful digital marketing campaigns and high-quality print materials, we are your all-in-one provider for advertising and technology needs.</p>
+                        <p class="mb-4"> With a commitment to exceptional quality and unmatched customer service, we help you elevate your brand and achieve your business goals.</p>
                         <div class="d-flex align-items-center mb-4 pb-2">
                             <img class="flex-shrink-0 rounded-circle" src="img/team-1.jpg" alt="" style="width: 50px; height: 50px;">
                             <div class="ps-4">
