--- a/team.html
+++ b/team.html
@@ -175,8 +175,8 @@
                         <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-1.jpg" alt="">
                         <div class="team-text">
                             <div class="team-title">
-                                <h5>Full Name</h5>
-                                <span>Designation</span>
+                                <h5>Getnet Adane</h5>
+                                <span>General Manager</span>
                             </div>
                             <div class="team-social">
                                 <a class="btn btn-square btn-primary rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
@@ -191,8 +191,8 @@
                         <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-2.jpg" alt="">
                         <div class="team-text">
                             <div class="team-title">
-                                <h5>Full Name</h5>
-                                <span>Designation</span>
+                                <h5>Yibelital Semagn</h5>
+                                <span>Operational Manager</span>
                             </div>
                             <div class="team-social">
                                 <a class="btn btn-square btn-primary rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
@@ -207,8 +207,8 @@
                         <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.jpg" alt="">
                         <div class="team-text">
                             <div class="team-title">
-                                <h5>Full Name</h5>
-                                <span>Designation</span>
+                                <h5>Mastewal Teklie</h5>
+                                <span>Project Manager</span>
                             </div>
                             <div class="team-social">
                                 <a class="btn btn-square btn-primary rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
