--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-4 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="fw-bold text-primary m-0"><i class="fa fa-laptop-code me-3"></i>DGcom</h1>
+                    <h1 class="fw-bold text-success m-0"><i class="fa fa-laptop-code me-3"></i>DGcom</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
             </div>
@@ -253,8 +253,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
-                        <h1 class="display-6 mb-4">#1 Digital Solution With <span class="text-primary">10 Years</span> Of Experience</h1>
+                        <h6 class="section-title bg-white text-start text-success pe-3">About Us</h6>
+                        <h1 class="display-6 mb-4">#1 Digital Solution With <span class="text-success">10 Years</span> Of Experience</h1>
                         <p>At ነገን tech solutions, we offer a comprehensive range of services, including software development, digital marketing, technology solutions, printing, and graphic design. Our mission is to empower businesses with tailored software applications and effective online strategies that drive growth and engagement. From custom software solutions to impactful digital marketing campaigns and high-quality print materials, we are your all-in-one provider for advertising and technology needs.</p>
                         <p class="mb-4"> With a commitment to exceptional quality and unmatched customer service, we help you elevate your brand and achieve your business goals.</p>
                         <div class="d-flex align-items-center mb-4 pb-2">
@@ -264,7 +264,7 @@
                                 <small>SEO & Founder</small>
                             </div>
                         </div>
-                        <a class="btn btn-primary rounded-pill py-3 px-5" href="">Read More</a>
+                        <a class="btn btn-success rounded-pill py-3 px-5" href="">Read More</a>
                     </div>
                 </div>
             </div>
@@ -283,37 +283,37 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
-                        <img class="img-fluid rounded mb-4" src="img/service-1.jpg" alt="">
+                        <img class="img-fluid rounded mb-4" src="img/web-design.webp" alt="">
                         <h4 class="mb-0">Web Design</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
-                        <img class="img-fluid rounded mb-4" src="img/service-2.jpg" alt="">
+                        <img class="img-fluid rounded mb-4" src="img/app-development.webp" alt="">
                         <h4 class="mb-0">App Development</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
-                        <img class="img-fluid rounded mb-4" src="img/service-3.jpg" alt="">
+                        <img class="img-fluid rounded mb-4" src="img/seo.webp" alt="">
                         <h4 class="mb-0">SEO Optimization</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
-                        <img class="img-fluid rounded mb-4" src="img/service-4.jpg" alt="">
+                        <img class="img-fluid rounded mb-4" src="img/Social-media.webp" alt="">
                         <h4 class="mb-0">Social Marketing</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
-                        <img class="img-fluid rounded mb-4" src="img/service-5.jpg" alt="">
+                        <img class="img-fluid rounded mb-4" src="img/email.webp" alt="">
                         <h4 class="mb-0">Email Marketing</h4>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <a class="service-item d-block rounded text-center h-100 p-4" href="">
-                        <img class="img-fluid rounded mb-4" src="img/service-6.jpg" alt="">
+                        <img class="img-fluid rounded mb-4" src="img/ppc.webp" alt="">
                         <h4 class="mb-0">PPC Advertising</h4>
                     </a>
                 </div>
@@ -371,7 +371,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/feature.jpg" alt="">
+                        <img class="img-fluid" src="img/mastewal.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -484,11 +484,11 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-1.webp" alt="">
                         <div class="team-text">
                             <div class="team-title">
-                                <h5>Full Name</h5>
-                                <span>Designation</span>
+                                <h5>Mastewal Teklie</h5>
+                                <span>PRoject Manager</span>
                             </div>
                             <div class="team-social">
                                 <a class="btn btn-square btn-primary rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
@@ -503,7 +503,7 @@
                         <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-2.jpg" alt="">
                         <div class="team-text">
                             <div class="team-title">
-                                <h5>Full Name</h5>
+                                <h5>Getnet Adane</h5>
                                 <span>Designation</span>
                             </div>
                             <div class="team-social">
@@ -519,7 +519,7 @@
                         <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.jpg" alt="">
                         <div class="team-text">
                             <div class="team-title">
-                                <h5>Full Name</h5>
+                                <h5>Yibeltal Semagn</h5>
                                 <span>Designation</span>
                             </div>
                             <div class="team-social">
