--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <p>At ነገን tech solutions, we offer a comprehensive range of services, including software development, digital marketing, technology solutions, printing, and graphic design. Our mission is to empower businesses with tailored software applications and effective online strategies that drive growth and engagement. From custom software solutions to impactful digital marketing campaigns and high-quality print materials, we are your all-in-one provider for advertising and technology needs.</p>
                         <p class="mb-4"> With a commitment to exceptional quality and unmatched customer service, we help you elevate your brand and achieve your business goals.</p>
                         <div class="d-flex align-items-center mb-4 pb-2">
-                            <img class="flex-shrink-0 rounded-circle" src="img/team-1.jpg" alt="" style="width: 50px; height: 50px;">
+                            <img class="flex-shrink-0 rounded-circle" src="img/team-1.webp" alt="" style="width: 50px; height: 50px;">
                             <div class="ps-4">
                                 <h6>Jhon Doe</h6>
                                 <small>SEO & Founder</small>
@@ -651,12 +651,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a href="#">ነገን ቴክ Solutions</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                        <br>Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                        Designed By ነገን ቴክ Solutions
                     </div>
                 </div>
             </div>
