--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         <img class="img-fluid rounded" src="img/project-2.jpg" alt="">
                         <a href="img/project-2.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>Website Design</h6>
                     <span>Digital agency website design and development</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="03">
@@ -409,7 +409,7 @@
                         <img class="img-fluid rounded" src="img/project-3.jpg" alt="">
                         <a href="img/project-2.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>Graphics Design</h6>
                     <span>Digital agency website design and development</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="04">
@@ -417,7 +417,7 @@
                         <img class="img-fluid rounded" src="img/project-4.jpg" alt="">
                         <a href="img/project-4.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>Logo Design</h6>
                     <span>Digital agency website design and development</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="05">
@@ -425,7 +425,7 @@
                         <img class="img-fluid rounded" src="img/project-5.jpg" alt="">
                         <a href="img/project-5.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>Sysetem Development</h6>
                     <span>Digital agency website design and development</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="06">
@@ -433,7 +433,7 @@
                         <img class="img-fluid rounded" src="img/project-6.jpg" alt="">
                         <a href="img/project-6.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>FaceBook Boost</h6>
                     <span>Digital agency website design and development</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="07">
@@ -441,7 +441,7 @@
                         <img class="img-fluid rounded" src="img/project-7.jpg" alt="">
                         <a href="img/project-7.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>Google Advertising</h6>
                     <span>Digital agency website design and development</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="08">
@@ -449,7 +449,7 @@
                         <img class="img-fluid rounded" src="img/project-8.jpg" alt="">
                         <a href="img/project-8.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>Website Design</h6>
                     <span>Digital agency website design and development</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="09">
@@ -457,7 +457,7 @@
                         <img class="img-fluid rounded" src="img/project-9.jpg" alt="">
                         <a href="img/project-9.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>Social Media</h6>
                     <span>Digital agency website design and development</span>
                 </div>
                 <div class="project-item border rounded h-100 p-4" data-dot="10">
@@ -465,7 +465,7 @@
                         <img class="img-fluid rounded" src="img/project-10.jpg" alt="">
                         <a href="img/project-10.jpg" data-lightbox="project"><i class="fa fa-eye fa-2x"></i></a>
                     </div>
-                    <h6>UI / UX Design</h6>
+                    <h6>SMS Marketing</h6>
                     <span>Digital agency website design and development</span>
                 </div>
             </div>
