--- a/project.html
+++ b/project.html
@@ -316,7 +316,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, Addis Ababa, Ethiopia</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519482673240</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>negentechsolutions@gmail.com</p>
                     <div class="d-flex pt-2">
