--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-4 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="fw-bold text-success m-0"><i class="fa fa-laptop-code me-3"></i>DGcom</h1>
+                    <h1 class="fw-bold text-primary m-0"><i class="fa fa-laptop-code me-3"></i>ነገን</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
             </div>
@@ -500,7 +500,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-2.png" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>Getnet Adane</h5>
@@ -516,7 +516,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.png" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>Yibeltal Semagn</h5>
