--- a/team.html
+++ b/team.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-2.png" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>Yibelital Semagn</h5>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.png" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>Mastewal Teklie</h5>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-2.png" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>Full Name</h5>
@@ -236,7 +236,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.png" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>Full Name</h5>
