--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="carousel-caption">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leader In</h4>
-                            <h1 class="display-1 text-white mb-0 animated zoomIn">Creative & Innovative Digital Solution</h1>
+                            <h1 class="display-1 text-white mb-0 animated zoomIn">Software Development</h1>
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                     <div class="carousel-caption">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-4 animated zoomIn">We Are Leader In</h4>
-                            <h1 class="display-1 text-white mb-0 animated zoomIn">Creative & Innovative Digital Solution</h1>
+                            <h1 class="display-1 text-white mb-0 animated zoomIn">Digital Marketing</h1>
                         </div>
                     </div>
                 </div>
