--- a/index.html
+++ b/index.html
@@ -331,13 +331,13 @@
                     <div class="h-100">
                         <h6 class="section-title bg-white text-start text-primary pe-3">Why Choose Us</h6>
                         <h1 class="display-6 mb-4">Why People Trust Us? Learn About Us!</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4">At ነገን tech solutions, trust is the cornerstone of our partnerships. Clients choose us for our expertise in the latest trends, transparent communication, and a client-centric approach that tailors solutions to their needs. Our proven track record showcases successful projects, and positive testimonials reflect our commitment to excellence and strong relationships. We also provide continuous support to ensure your ongoing success. Let’s achieve your goals together!</p>
                         <div class="row g-4">
                             <div class="col-12">
                                 <div class="skill">
                                     <div class="d-flex justify-content-between">
                                         <p class="mb-2">Digital Marketing</p>
-                                        <p class="mb-2">85%</p>
+                                        <p class="mb-2">97%</p>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -358,7 +358,7 @@
                             <div class="col-12">
                                 <div class="skill">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Design & Development</p>
+                                        <p class="mb-2">Software Design & Development</p>
                                         <p class="mb-2">95%</p>
                                     </div>
                                     <div class="progress">
