--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                             <span>Profession</span>
                         </div>
                     </div>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">The team transformed our website beyond our expectations! Their creativity made all the difference.</p>
                 </div>
                 <div class="testimonial-item bg-light rounded p-4">
                     <div class="d-flex align-items-center mb-4">
@@ -562,7 +562,7 @@
                             <span>Profession</span>
                         </div>
                     </div>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">Thanks to their social media strategy, our engagement has skyrocketed. They truly understand our brand!</p>
                 </div>
                 <div class="testimonial-item bg-light rounded p-4">
                     <div class="d-flex align-items-center mb-4">
@@ -572,7 +572,7 @@
                             <span>Profession</span>
                         </div>
                     </div>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">Their branding expertise helped us stand out in a competitive market. We couldn't be happier with the results!</p>
                 </div>
                 <div class="testimonial-item bg-light rounded p-4">
                     <div class="d-flex align-items-center mb-4">
@@ -582,7 +582,7 @@
                             <span>Profession</span>
                         </div>
                     </div>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                    <p class="mb-0">Their branding expertise helped us stand out in a competitive market. We couldn't be happier with the results!</p>
                 </div>
             </div>
         </div>
