--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/about.jpg" alt="">
+                        <img class="img-fluid" src="img/team-3.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -216,7 +216,7 @@
                         <p>At ነገን tech solutions, we offer a comprehensive range of services, including software development, digital marketing, technology solutions, printing, and graphic design. Our mission is to empower businesses with tailored software applications and effective online strategies that drive growth and engagement. From custom software solutions to impactful digital marketing campaigns and high-quality print materials, we are your all-in-one provider for advertising and technology needs.</p>
                         <p class="mb-4"> With a commitment to exceptional quality and unmatched customer service, we help you elevate your brand and achieve your business goals.</p>
                         <div class="d-flex align-items-center mb-4 pb-2">
-                            <img class="flex-shrink-0 rounded-circle" src="img/team-1.jpg" alt="" style="width: 50px; height: 50px;">
+                            <img class="flex-shrink-0 rounded-circle" src="img/team-3.png" alt="" style="width: 50px; height: 50px;">
                             <div class="ps-4">
                                 <h6>Jhon Doe</h6>
                                 <small>SEO & Founder</small>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/feature.jpg" alt="">
+                        <img class="img-fluid" src="img/team-2.png" alt="">
                     </div>
                 </div>
             </div>
@@ -298,7 +298,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-3.png" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>Getnet Adane</h5>
