--- a/team.html
+++ b/team.html
@@ -172,7 +172,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item text-center p-4">
-                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid border rounded-circle w-75 p-2 mb-4" src="img/team-1.webp" alt="">
                         <div class="team-text">
                             <div class="team-title">
                                 <h5>Getnet Adane</h5>
