--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-4 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="fw-bold text-primary m-0"><i class="fa fa-laptop-code me-3"></i>ነገን</h1>
+                    <h5 class="fw-bold text-primary m-0">
+                        <!-- <i class="fa fa-laptop-code me-3"> -->
+                        </i><img src="img/logo.png"  alt="Logo">Digital Solutions</h5>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
             </div>
